Почистил и улучшил код (теперь на binding)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,12 +40,12 @@ dependencies {
     implementation files('libs/data-debug.aar')
     implementation files('libs/domain-debug.aar')
 
-    implementation 'org.altbeacon:android-beacon-library:2.19.5' // https://altbeacon.github.io/android-beacon-library
+    implementation 'org.altbeacon:android-beacon-library:2.19.5'
     implementation 'com.lemmingapex.trilateration:trilateration:1.0.2'
 
     implementation("io.github.sceneview:arsceneview:0.9.7")
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
